--- a/prosjekter.html
+++ b/prosjekter.html
@@ -69,7 +69,7 @@ For at de som hjelper skal være opplagt og kunne gi hjelp og medmenneskelighet,
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Creator</a></section><section class="mbr-section mbr-section--relative mbr-after-navbar" id="msg-box5-n" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Maker</a></section><section class="mbr-section mbr-section--relative mbr-after-navbar" id="msg-box5-n" style="background-color: rgb(255, 255, 255);">
     
     <div class="mbr-section__container mbr-section__container--isolated container" style="padding-top: 93px; padding-bottom: 93px;">
         <div class="row">
@@ -111,7 +111,7 @@ For at de som hjelper skal være opplagt og kunne gi hjelp og medmenneskelighet,
                             <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                         </div>
                         <form action="https://mobirise.com/" method="post" data-form-title="FORESLÅ PROSJEKT">
-                            <input type="hidden" value="O8NWjkxmkH7ol7rtwMh/U9DRfPQVmb7u9sn5Oo3uMWgl/DdSdhke6RjtkipH80B4Bjp9MNQs/rA66RHpU6Z/KAw4cBhwcyhhQx7YdYhNR7ibV/Kmt4FfbhymY3QL2WzO" data-form-email="true">
+                            <input type="hidden" value="KB+7xP4sWnBIIkq2x5DYy9neTdmF2Q9fNJFYQcWvIbVl5loOwQKCn0W1ouxTCMnmH3OTA7hZKinHVi9D4idogHoECkiIVlmPJAPHzCszNESSYguyv9AT5CGGB63mSkRL" data-form-email="true">
                             <div class="form-group">
                                 <input type="text" class="form-control" name="name" required="" placeholder="Name*" data-form-field="Name">
                             </div>
@@ -154,7 +154,7 @@ Phone: +47 900 56 958<br><br></p>
                     <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="7dhCrGHbFw46n/mo38r5O6a4rcvQeLHiaHDFACNwZb0dUB19gWRMMYL6sGQTmejcZnnlJxOtL5adZSrk8ysiUOqZvhy+dqbi8Xij2iTKU6i2THc8Qm4Q4UArJnvCvHkx" data-form-email="true">
+                    <input type="hidden" value="VsWu6qLHVLphlJU/X3DlaRUjfLWYQ2C2sKy6dhxxeoFYjzrpQP2sdb/pRCgkQSGRuLlAR8kciytNGa9YFaV6gruCwB+GOaKieyWKUGaCRgqtnS845YVpGTVwcjXHELCo" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
