--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@ For at de som hjelper skal være opplagt og kunne gi hjelp og medmenneskelighet,
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Builder</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-after-navbar" id="header4-2" data-bg-video="https://www.youtube.com/embed/YBGGEVbxnx8?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
-    <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted" id="header4-2" data-bg-video="https://www.youtube.com/embed/YBGGEVbxnx8?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
+    <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center mbr-after-navbar">
         <div class="mbr-overlay" style="opacity: 0.2; background-color: rgb(34, 34, 34);"></div>
         <div class="mbr-box__container mbr-section__container container">
             <div class="mbr-box mbr-box--stretched"><div class="mbr-box__magnet mbr-box__magnet--center-center">
@@ -82,7 +82,7 @@ For at de som hjelper skal være opplagt og kunne gi hjelp og medmenneskelighet,
                         <h1 class="mbr-hero__text">Helping the helpers</h1>
                         
                     </div>
-                    <div class="mbr-buttons btn-inverse mbr-buttons--center"><a class="mbr-buttons__btn btn btn-lg btn-danger animated fadeInUp delay" href="https://mobirise.com">Gi ditt bidrag til Salam Kitchen prosjektet</a> </div>
+                    <div class="mbr-buttons btn-inverse mbr-buttons--center"><a class="mbr-buttons__btn btn btn-lg btn-danger animated fadeInUp delay" href="bidrag.html">Gi ditt bidrag til Salam Kitchen prosjektet</a> </div>
                 </div></div>
             </div></div>
         </div>
@@ -309,7 +309,7 @@ Phone: +47 900 56 958<br><br></p>
                     <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="LgZSSkXFH8vC8Xecmv4SskB2mojEzAVfcjTwJMBAuimhTxGjPf7DEX+XEKosmAg/pdNNxGhTNOfE71SQJzxRHgHiwgpYDp9k3vArGYFIWvXDezT6b7UWzX6mH/8SdZEz" data-form-email="true">
+                    <input type="hidden" value="EcqSKghgFC7xnaJcl0Hip9/rSBNdz+buP2c1q0rLMxfWFnBuWGut6qz2Y4s1kbe9RRmB4Xxco3IkbzoJMMEs0+m6T6REdnkwMZhscfLvesFM167IKoGdH21QN7jRzuUf" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
