--- a/prosjekter.html
+++ b/prosjekter.html
@@ -69,7 +69,7 @@ For at de som hjelper skal være opplagt og kunne gi hjelp og medmenneskelighet,
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Maker</a></section><section class="mbr-section mbr-section--relative mbr-after-navbar" id="msg-box5-n" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Builder</a></section><section class="mbr-section mbr-section--relative mbr-after-navbar" id="msg-box5-n" style="background-color: rgb(255, 255, 255);">
     
     <div class="mbr-section__container mbr-section__container--isolated container" style="padding-top: 93px; padding-bottom: 93px;">
         <div class="row">
@@ -111,7 +111,7 @@ For at de som hjelper skal være opplagt og kunne gi hjelp og medmenneskelighet,
                             <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                         </div>
                         <form action="https://mobirise.com/" method="post" data-form-title="FORESLÅ PROSJEKT">
-                            <input type="hidden" value="KB+7xP4sWnBIIkq2x5DYy9neTdmF2Q9fNJFYQcWvIbVl5loOwQKCn0W1ouxTCMnmH3OTA7hZKinHVi9D4idogHoECkiIVlmPJAPHzCszNESSYguyv9AT5CGGB63mSkRL" data-form-email="true">
+                            <input type="hidden" value="T+3M7TW5hOUF2Ml2f3kiU31MC4xCmcDCJMx14PeKzrhDdwdvt80Ot6rQ1zhfkShhT/6oiZzGU2aQS+wJs7hjLVWfMlCdP5e+lQCll6j4lXD7HPomHut5bvEkkhzC99yK" data-form-email="true">
                             <div class="form-group">
                                 <input type="text" class="form-control" name="name" required="" placeholder="Name*" data-form-field="Name">
                             </div>
@@ -154,7 +154,7 @@ Phone: +47 900 56 958<br><br></p>
                     <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="VsWu6qLHVLphlJU/X3DlaRUjfLWYQ2C2sKy6dhxxeoFYjzrpQP2sdb/pRCgkQSGRuLlAR8kciytNGa9YFaV6gruCwB+GOaKieyWKUGaCRgqtnS845YVpGTVwcjXHELCo" data-form-email="true">
+                    <input type="hidden" value="5QI1/QrOjkVpWpx0r6+BftB5nJpl8uqkTCcq6uCIUj6HL6szCfyxU1+BEy5m0t4Wandp7q+21Fd8QoFZoM45MeobpRtfVYSOK1RZHqlcS2EdyCJ5Y0y9lnW4drBtbhqb" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
