--- a/salam_ladc.html
+++ b/salam_ladc.html
@@ -70,7 +70,7 @@ For at de som hjelper skal være opplagt og kunne gi hjelp og medmenneskelighet,
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header4-t" style="background-image: url(assets/images/salam-ladc-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header4-t" style="background-image: url(assets/images/salam-ladc-2000x1333.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center">
         
         <div class="mbr-box__container mbr-section__container container">
@@ -173,7 +173,7 @@ Phone: +47 900 56 958<br><br></p>
                     <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="3CZ/HwaV2jqhKPQJlGEd3g8qovZnLVV/l++kUwtxW+F7oAoM9NFkNtk76V4tqsywI6VqtnmUD99umXAjrxz4o8x4/bn4UML/5l4C6Q7/D/A79wnI7lRJ7VQ/fdr+5wj6" data-form-email="true">
+                    <input type="hidden" value="ELG58CxNiMBkN+MKP3EpbX7pf5Jd2vsQf1dXLorECBkR5xGaJKjMJ1TqUtro8M0eTWy1PrPCy8J4hSKQzg2EG+Myi1RaKzUSGKa4+RSymTeN1optWQeKiSDUlYK4Q+5O" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
