--- a/salamkitchen.html
+++ b/salamkitchen.html
@@ -70,7 +70,7 @@ For at de som hjelper skal være opplagt og kunne gi hjelp og medmenneskelighet,
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-after-navbar" id="msg-box3-15" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Site Builder</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-after-navbar" id="msg-box3-15" style="background-color: rgb(255, 255, 255);">
     
     <div class="mbr-section__container container mbr-section__container--first" style="padding-top: 93px;">
         <div class="mbr-header mbr-header--wysiwyg row">
@@ -210,7 +210,7 @@ For at de som hjelper skal være opplagt og kunne gi hjelp og medmenneskelighet,
         <div class="mbr-section__row row">
             <div class="mbr-section__col col-xs-12 col-lg-2-4 col-md-4 col-sm-6">
                 <div class="mbr-section__container mbr-section__container--center mbr-section__container--middle">
-                    <figure class="mbr-figure"><img src="assets/images/terjechristensen-600x6006.png" class="mbr-figure__img"></figure>
+                    <figure class="mbr-figure"><img src="assets/images/terjechristensen-600x6008.png" class="mbr-figure__img"></figure>
                 </div>
                 <div class="mbr-section__container mbr-section__container--middle">
                     <div class="mbr-header mbr-header--reduce mbr-header--center mbr-header--wysiwyg">
@@ -226,7 +226,7 @@ For at de som hjelper skal være opplagt og kunne gi hjelp og medmenneskelighet,
             </div>
             <div class="mbr-section__col col-xs-12 col-lg-2-4 col-md-4 col-sm-6">
                 <div class="mbr-section__container mbr-section__container--center mbr-section__container--middle">
-                    <figure class="mbr-figure"><img src="assets/images/terjesaeterbo-600x6007.png" class="mbr-figure__img"></figure>
+                    <figure class="mbr-figure"><img src="assets/images/terjesaeterbo-600x6009.png" class="mbr-figure__img"></figure>
                 </div>
                 <div class="mbr-section__container mbr-section__container--middle">
                     <div class="mbr-header mbr-header--reduce mbr-header--center mbr-header--wysiwyg">
@@ -317,7 +317,7 @@ Phone: +47 900 56 958<br><br></p>
                     <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="CS5QTxeYvZePFkAiI0wLqGeZaNoLfcOyF/d62F8hCVensWAAwtCilgp5/8QmwdgM65ZIynqB7RaI8Ij9vjCNbNbAcy3sEGSNKN9Hjqk3WswscDOjxgFbQdeHLB/1b+ZT" data-form-email="true">
+                    <input type="hidden" value="kMLxJy+c3o6a4KO6V3yMVe4CxzsDTqdZI/Omnp07U3gwbSX17PEg2qpTfn7Lzn0mQaDiPpan/V9zbdbF6GgZA2VmPvyT0Ma8IkzCNb3E8VasK4udQ57VcbPoAC22Rs88" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
