--- a/bidrag.html
+++ b/bidrag.html
@@ -70,7 +70,7 @@ For at de som hjelper skal være opplagt og kunne gi hjelp og medmenneskelighet,
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Site Maker</a></section><section class="mbr-section mbr-section--relative mbr-after-navbar" id="msg-box4-14" style="background-color: rgb(249, 115, 82);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section--relative mbr-after-navbar" id="msg-box4-14" style="background-color: rgb(249, 115, 82);">
     
     <div class="mbr-section__container mbr-section__container--isolated container" style="padding-top: 93px; padding-bottom: 93px;">
         <div class="row">
@@ -189,7 +189,7 @@ Phone: +47 900 56 958<br><br></p>
                     <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="lkCtKCPEBkFdd8ZpPQzPcS3TEI4NUTteCC8yfTJGw5JsAPTW3b8P4hYUj16WOZeypjUYl4DiuqtQ0U9GDP2uWuWr/epuSn0QUE6N6IumIschqfl2LXwHBYznR2WMJg8m" data-form-email="true">
+                    <input type="hidden" value="izJ7kiV841w9et4V31uC5zy/IGTQJu1Ys1jLq5cA3bqDniGTao+vALQi8RlgcJXZ/GSSg3T4Vc1lli8e4/MFd0ofhxDQVuSy57kvb2jUExwRaPBt+QjKzuh7HkSj8PKc" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
