--- a/salam_ladc.html
+++ b/salam_ladc.html
@@ -70,7 +70,7 @@ For at de som hjelper skal være opplagt og kunne gi hjelp og medmenneskelighet,
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header4-t" style="background-image: url(assets/images/salam-ladc-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Site Maker</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header4-t" style="background-image: url(assets/images/salam-ladc-2000x1333.jpg);">
     <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center">
         
         <div class="mbr-box__container mbr-section__container container">
@@ -173,7 +173,7 @@ Phone: +47 900 56 958<br><br></p>
                     <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="cXKcwwrxEi10qhPUGkVrcEIPmM/ssvJpnd72pYxlov6zw3/EyXaRAxCkNjy6WZoJ9N1ZMOapmiA4Nbndqq1jHsY6Hc5PDKR3HXNY4eMIrQPWKMPESYKeHEUKGA3Ui6FR" data-form-email="true">
+                    <input type="hidden" value="fvGpOxwbdnFc+KU7Cli89uHNnpwEyhyrSqJqPYh9b3kQvJgEor/tf9EtzfBvfkbBZswSF/reujbrP3Md+Ek/Dh+m/A6X9fXWdXhM3NlpQnc/j8g6mIT5u648QaUeHCvL" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
