--- a/about.html
+++ b/about.html
@@ -70,8 +70,8 @@ For at de som hjelper skal være opplagt og kunne gi hjelp og medmenneskelighet,
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" id="header2-f" style="background-image: url(assets/images/helpersbamse-2000x1767.jpg);">
-    <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-left mbr-after-navbar">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header2-f" style="background-image: url(assets/images/helpersbamse-2000x1767.jpg);">
+    <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-left">
         
         <div class="mbr-box__container mbr-section__container container">
             <div class="mbr-box mbr-box--stretched"><div class="mbr-box__magnet mbr-box__magnet--center-left">
@@ -236,7 +236,7 @@ Phone: +47 900 56 958<br><br></p>
                     <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="zouTvXyaYb5XWQNo432OWMlXXqvhUWv/2cB+9PBB/qBbfEQBvRiSxpdqs+qR250Do0pxE+5BAGBdR/bQhg2u6YP1s0D2fgeT2289vqdL+5zag8TPOPix4saDVWhkHrzM" data-form-email="true">
+                    <input type="hidden" value="RZ+f9myVOgUxFFD1JSKGycSJf2/cXPxYohBQAIKRaRkKEzYj94drHK8gmzZcx6f1kADj/cENltSW55dzZW8sCOIgHvWSvztgXQmOkfv5/dx3EbEMFE1gJqGlkBOI/Ixe" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
