--- a/salamkitchen.html
+++ b/salamkitchen.html
@@ -70,7 +70,7 @@ For at de som hjelper skal være opplagt og kunne gi hjelp og medmenneskelighet,
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Website Maker</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-after-navbar" id="msg-box3-15" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Builder</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-after-navbar" id="msg-box3-15" style="background-color: rgb(255, 255, 255);">
     
     <div class="mbr-section__container container mbr-section__container--first" style="padding-top: 93px;">
         <div class="mbr-header mbr-header--wysiwyg row">
@@ -332,7 +332,7 @@ Phone: +47 900 56 958<br><br></p>
                     <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="6eyEdutEgjf5/zU86SdlnbMA/5nX73S60Uh4+Gs7S3rwibot/L9f5A/Rt3mQJZDftCD6lckVHvMGEdD/AjQ8NwOJ3q2U9q+6c/i/chSjF5AKOYXLfketTMVcn8Z/DZgH" data-form-email="true">
+                    <input type="hidden" value="rEEJwKU7vNCezWY8mRL7YxEijdt2xBFoAPJ0HWOtpOn77gc7c6GZc16jBARjV6DlKP/LhtrlPaexUal8JRaCMf7+xBwTI33TewLktpOi1w9UbtbYs40FuYNVDucQk/D1" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
