--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ For at de som hjelper skal være opplagt og kunne gi hjelp og medmenneskelighet,
                 <div class="mbr-navbar__column mbr-navbar__column--s mbr-navbar__brand">
                     <span class="mbr-navbar__brand-link mbr-brand mbr-brand--inline">
                         
-                        <span class="mbr-brand__name"><a class="mbr-brand__name text-white" href="https://helpers.no">Helpers.no</a></span>
+                        <span class="mbr-brand__name"><a class="mbr-brand__name text-white" href="http://helpers.no">Helpers.no</a></span>
                     </span>
                 </div>
                 <div class="mbr-navbar__hamburger mbr-hamburger"><span class="mbr-hamburger__line"></span></div>
@@ -72,8 +72,8 @@ For at de som hjelper skal være opplagt og kunne gi hjelp og medmenneskelighet,
     </div>
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Builder</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-after-navbar" id="header4-2" data-bg-video="https://www.youtube.com/embed/YBGGEVbxnx8?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
-    <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center">
+<section class="engine"><a rel="external" href="https://mobirise.com">Website Builder</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted" id="header4-2" data-bg-video="https://www.youtube.com/embed/YBGGEVbxnx8?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
+    <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-center mbr-after-navbar">
         <div class="mbr-overlay" style="opacity: 0.2; background-color: rgb(34, 34, 34);"></div>
         <div class="mbr-box__container mbr-section__container container">
             <div class="mbr-box mbr-box--stretched"><div class="mbr-box__magnet mbr-box__magnet--center-center">
@@ -309,7 +309,7 @@ Phone: +47 900 56 958<br><br></p>
                     <div class="hide" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="tZxdFG/bIAiWJmp9BmSUF6hOMHhjKPQMOmTqQCLSRnTlIGFZJ6sAB3sTDeXngcfMcPUVYZ9CGsznSrTSkdatNPUjzdFJrdIo6u1+jApAk0iJ5C+VWeU7ELy8xWZ/0TPk" data-form-email="true">
+                    <input type="hidden" value="Y4r4GKh6mRmjpVIxNqBL6ia8++tgsxKIql642mjS2BYRniBTPERVrLl7bsTyFKTpIJJvSwSsgnfEC8L+p6VDHJCaTxY1dhcqZDW8iSlmdZDWRJ0HxwIhCio+BUcJxA4M" data-form-email="true">
                     
                     <div class="form-group">
                         <input type="email" class="form-control input-sm input-inverse" name="email" required="" placeholder="Email*" data-form-field="Email">
